fixed mystery not centered ul, converted to spans

--- a/browser/style.less
+++ b/browser/style.less
@@ -164,19 +164,14 @@ div.css-form-wrap div.css-field p.css-title {
   color: rgba(255,255,255,1);
   text-align: center;
   padding-top: 150px;
-  padding-left: 30px;
   float:center;
   width:400px; 
 }
-.css-small-points ul li{
-  list-style:none;
+.css-small-points{
   text-align: center;
   color:rgba(255,255,255,1);
 }
 #css-body-wrapper form input{
-  display:block;
-  margin-left: auto;
-  margin-right: auto;
   width:275px;
   border-color:rgba(0,174,239,1);
   border-width:4px;
@@ -194,6 +189,7 @@ div.css-form-wrap div.css-field p.css-title {
 .css-right-hand{
   width:400px;
   float:left;
+  text-align: center;
 }
 .css-dreams-subtext{
   color:rgba(255,255,255,1);
